<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Haydar Kardesler on 26.05.2022 02:57
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 26.05.2022 02:57
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_manual_control"
            android:icon="@drawable/ic_joystick"
            android:title="@string/menu_manual_control"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"
            android:checkable="false" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_report_bug"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_report_bug"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/menu_signout"
            android:checkable="false"/>
    </group>
</menu>