<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Haydar Kardesler.
  ~ Copyright (c) 2021. All Rights Reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/circle_gray"
        android:padding="10dp"
        android:src="@drawable/ic_close_2"
        app:tint="@color/gradientViolet" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="about.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/animation_view"
        android:fontFamily="@font/montserrat_extra_light"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/about_title"
        android:textColor="@color/gradientViolet"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#f1f1f1"
        android:layout_below="@id/txtTitle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        android:layout_below="@id/view_line"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F1F1F1"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:fontFamily="@font/montserrat_light"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/copyright_text"
        android:textColor="@color/gray1"
        android:textSize="13sp"
        android:layout_below="@id/txtGitHubLink"/>

    <TextView
        android:id="@+id/txtGitHubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repo_link"
        android:fontFamily="@font/montserrat_light"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:textColorLink="@color/gradientViolet"
        android:layout_below="@id/card_view"

        />

</RelativeLayout>