<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:background="@color/bg_color"
    android:animateLayoutChanges="true"
    >

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".activities.SignInActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/bg_color">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/circle"
                    android:padding="12dp"
                    />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView">

                    <TextView
                        android:id="@+id/txtLoginTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/login_welcome"
                        android:textColor="@color/black"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/txtLoginAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="23sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/login_desc"
                    android:textColor="@color/gray1"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDesc">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_email"
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            app:srcCompat="@drawable/ic_email"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            app:tint="@color/gray1" />

                            <EditText
                                android:id="@+id/input_email"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_toEndOf="@id/img_email"
                                android:background="@null"
                                android:fontFamily="@font/montserrat_light"
                                android:hint="@string/email_hint"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/black"
                                android:textCursorDrawable="@null"
                                android:textSize="15sp"
                                android:theme="@style/Theme.Edittext" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_password"
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            app:srcCompat="@drawable/ic_password"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            app:tint="@color/gray1" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:passwordToggleEnabled="true"
                            app:boxBackgroundColor="@android:color/transparent"
                            android:background="@android:color/transparent"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:hintEnabled="false"
                            android:layout_toEndOf="@id/img_password">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_light"
                            android:hint="@string/pass_hint"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:theme="@style/Theme.Edittext"
                            />
                        </com.google.android.material.textfield.TextInputLayout>
                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <CheckBox
                    android:id="@+id/chkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/remember_me"
                    android:textColor="@color/gray1"
                    android:textSize="13sp"
                    android:theme="@style/checkBoxStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardview_login" />


                <TextView
                    android:id="@+id/btnForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/forgot_pass"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/chkRemember"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardview_login"
                    app:layout_constraintTop_toTopOf="@id/chkRemember" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/gradient_bg"
                    android:fontFamily="@font/montserrat_light"
                    android:padding="16dp"
                    android:text="@string/continue_btn"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chkRemember" />

                <LinearLayout
                    android:id="@+id/link_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_continue">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:gravity="center"
                        android:text="@string/dont_have_account"
                        android:textColor="#3c4b5d"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="#8e9cfe"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
